# gde2-control-center

./: AUTHORS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  org.gde2.control-center.gschema.xml.in  org.gde2.control-center.keybinding.gschema.xml.in
.tx/: config
capplets/about-me/: Makefile.am  eel-alert-dialog.c  eel-alert-dialog.h  gde2-about-me-fingerprint.c  gde2-about-me-fingerprint.h  gde2-about-me-password.c  gde2-about-me-password.h  gde2-about-me.c  gde2-about-me.desktop.in.in
capplets/accessibility/at-properties/: Makefile.am  gde2-at-properties.desktop.in.in  main.c
capplets/appearance/: Makefile.am  appearance-desktop.c  appearance-font.c  appearance-main.c  appearance-style.c  appearance-support.c  appearance-themes.c  appearance.h  gde2-wp-info.c  gde2-wp-info.h  gde2-wp-item.c  gde2-wp-item.h  gde2-wp-xml.c  gde2-wp-xml.h  theme-installer.c  theme-installer.h  theme-save.c  theme-save.h  theme-util.c
capplets/appearance/data/: Makefile.am  gde2-appearance-properties.desktop.in.in  gde2-theme-installer.desktop.in.in  gde2-theme-package.xml.in
capplets/common/: Makefile.am  activate-settings-daemon.c  capplet-util.c  gde2-theme-apply.c  gde2-theme-apply.h  gde2-theme-info.c  gde2-theme-info.h  gde2-theme-test.c  theme-thumbnail.c  theme-thumbnail.h  wm-common.c  wm-common.h
capplets/default-applications/: Makefile.am  gde2-da-capplet.c  gde2-da-capplet.h  gde2-default-applications-properties.desktop.in.in  gde2-default-applications.pc.in
capplets/display/: Makefile.am  TODO  display-capplet.ui  gde2-display-properties-install-systemwide.c  gde2-display-properties.desktop.in.in  org.gde2.randr.policy.in  scrollarea.c  xrandr-capplet.c
capplets/keybindings/: 00-multimedia-key.xml.in  01-desktop-key.xml.in  Makefile.am  gde2-keybinding-properties.c  gde2-keybinding-properties.ui  gde2-keybinding.desktop.in.in  gde2-keybindings.pc.in
capplets/keyboard/: Makefile.am  gde2-keyboard-properties-a11y.c  gde2-keyboard-properties-a11y.h  gde2-keyboard-properties-xkb.c  gde2-keyboard-properties-xkb.h  gde2-keyboard-properties-xkblt.c  gde2-keyboard-properties-xkbltadd.c  gde2-keyboard-properties-xkbmc.c  gde2-keyboard-properties-xkbot.c  gde2-keyboard-properties-xkbpv.c  gde2-keyboard-properties.c  gde2-keyboard.desktop.in.in
capplets/mouse/: Makefile.am  gde2-mouse-properties.c  gde2-settings-mouse.desktop.in.in
capplets/network/: Makefile.am  gde2-network-properties.c  gde2-network-properties.desktop.in.in
capplets/windows/: Makefile.am  gde2-metacity-support.c  gde2-metacity-support.h  gde2-window-properties.c  gde2-window-properties.desktop.in.in
font-viewer/: Makefile.am  font-thumbnailer.c  font-view.c  gde2-font-viewer.desktop.in.in  gde2-font-viewer.thumbnailer
help/: Makefile.am
help/C/: config-background.xml  config-behavior.xml  config-cds.xml  config-default-apps.xml  config-hints.xml  config-html.xml  config-keybindings.xml  config-mouse.xml  config-screensaver.xml  config-themes.xml  index.docbook
help/ca/: ca.po
help/ca@valencia/: ca@valencia.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/fr/: fr.po
help/id/: id.po
help/it/: it.po
help/ja/: ja.po
help/oc/: oc.po
help/pa/: pa.po
help/pl/: pl.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sv/: sv.po
help/th/: th.po
help/uk/: uk.po
help/vi/: vi.po
help/zh_CN/: zh_CN.po
libslab/: Makefile.am  app-shell.c  app-shell.h  application-tile.c  application-tile.h  bookmark-agent.c  directory-tile.c  document-tile.c  gde2-slab.pc.in  gde2-utils.c  gde2-utils.h  libslab-utils.c  libslab-utils.h  slab-gde2-util.c  slab-gde2-util.h  slab.h  system-tile.c  themed-icon.c
libwindow-settings/: Makefile.am  finestra-window-manager.c  finestra-window-manager.h  gde2-window-manager.c  gde2-window-manager.h  gde2-window-settings-2.0.pc.in  gde2-wm-manager.c  gde2-wm-manager.h  marco-window-manager.c  marco-window-manager.h
man/: Makefile.am  gde2-about-me.1  gde2-appearance-properties.1  gde2-at-properties.1  gde2-control-center.1  gde2-default-applications-properties.1  gde2-display-properties-install-systemwide.1  gde2-display-properties.1  gde2-font-viewer.1  gde2-keybinding-properties.1  gde2-keyboard-properties.1  gde2-mouse-properties.1  gde2-network-properties.1  gde2-thumbnail-font.1  gde2-typing-monitor.1  gde2-window-properties.1
po/: POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_CO.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  frp.po  ga.po  gl.po  (+65 more)
shell/: Makefile.am  control-center.c  gde2cc.desktop.in.in  gde2cc.directory.in  gde2cc.menu
typing-break/: Makefile.am  drwright.c  drwright.h  main.c
