man_MANS = \
    gde2-about-me.1 \
    gde2-appearance-properties.1 \
    gde2-at-properties.1 \
    gde2-control-center.1 \
    gde2-default-applications-properties.1 \
    gde2-display-properties.1 \
    gde2-display-properties-install-systemwide.1 \
    gde2-font-viewer.1 \
    gde2-keybinding-properties.1 \
    gde2-keyboard-properties.1 \
    gde2-mouse-properties.1 \
    gde2-network-properties.1 \
    gde2-thumbnail-font.1 \
    gde2-typing-monitor.1 \
    gde2-window-properties.1

EXTRA_DIST = $(man_MANS)

-include $(top_srcdir)/git.mk
